--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "next": "14.1.4",
+    "next-seo": "^6.5.0",
     "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
